# IPFinal

./: CMakeLists.txt  Info.plist  README.md
Assets/: hdr.fragment.glsl  light.fragment.glsl  standard.fragment.glsl  standard.vertex.glsl
IPFinal/: App.cpp  App.hpp  CamFetch.cpp  CamFetch.hpp  CamRenderer.cpp  CamRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  FramebufferRenderer.cpp  FramebufferRenderer.hpp  HDRRenderer.cpp  HDRRenderer.hpp  IRenderer.cpp  IRenderer.hpp  Macros.h  Renderer.cpp  Renderer.hpp  StandardProgram.cpp  StandardProgram.hpp  Window.cpp  Window.hpp  glad.c  main.cpp
IPFinal.xcodeproj/: project.pbxproj
IPFinal.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
IPFinal.xcodeproj/project.xcworkspace/xcuserdata/apple.xcuserdatad/: UserInterfaceState.xcuserstate
IPFinal.xcodeproj/xcuserdata/apple.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
IPFinal.xcodeproj/xcuserdata/apple.xcuserdatad/xcschemes/: xcschememanagement.plist
